--- a/Carp/Info.plist
+++ b/Carp/Info.plist
@@ -56,6 +56,7 @@
 	<array>
 		<string>fa-regular-400.ttf</string>
 		<string>fa-solid-900.ttf</string>
+		<string>fa-brands-400.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
