Implementing scrollable content in registration form + camera view

--- a/Carp/Info.plist
+++ b/Carp/Info.plist
@@ -79,5 +79,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSCameraUsageDescription</key>
+    <string>CARP gostaria de acessar a câmera.</string>
 </dict>
 </plist>
